codex-rs/tui/src/chatwidget/snapshots/codex_tui__chatwidget__tests__replayed_interrupted_reconnect_footer_row.snap
---
source: tui/src/chatwidget/tests/history_replay.rs
assertion_line: 1093
expression: header
---
› Ask Codex Router to do anything
